# rag-banco

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/: eval_results.json  eval_results_sin_reranker.json
scripts/: eval_questions.json  run_analytics.py  run_eval.py  run_indexer.py  run_scraper.py
src/: app.py  config.py
src/analytics/: metrics.py
src/indexing/: chunking.py  embedder.py  vector_store.py
src/memory/: history.py
src/rag/: llm.py  pipeline.py  retriever.py
src/scraping/: cleaner.py  scraper.py
tests/: test_analytics.py  test_chunking.py  test_cleaner.py  test_config.py  test_history.py  test_llm.py  test_pipeline.py  test_retriever.py
